--- a/article_recommendation_system.ipynb
+++ b/article_recommendation_system.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Article</th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Data analysis is the process of inspecting and...</td>\n",
+       "      <td>Best Books to Learn Data Analysis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The performance of a machine learning algorith...</td>\n",
+       "      <td>Assumptions of Machine Learning Algorithms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>You must have seen the news divided into categ...</td>\n",
+       "      <td>News Classification with Machine Learning</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>When there are only two classes in a classific...</td>\n",
+       "      <td>Multiclass Classification Algorithms in Machin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Multinomial Naive Bayes is one of the vari...</td>\n",
+       "      <td>Multinomial Naive Bayes in Machine Learning</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Article  \\\n",
+       "0  Data analysis is the process of inspecting and...   \n",
+       "1  The performance of a machine learning algorith...   \n",
+       "2  You must have seen the news divided into categ...   \n",
+       "3  When there are only two classes in a classific...   \n",
+       "4  The Multinomial Naive Bayes is one of the vari...   \n",
+       "\n",
+       "                                               Title  \n",
+       "0                  Best Books to Learn Data Analysis  \n",
+       "1         Assumptions of Machine Learning Algorithms  \n",
+       "2          News Classification with Machine Learning  \n",
+       "3  Multiclass Classification Algorithms in Machin...  \n",
+       "4        Multinomial Naive Bayes in Machine Learning  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv(\"data/articles.csv\")\n",
     "data.head()"
@@ -45,18 +121,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 34 entries, 0 to 33\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   Article  34 non-null     object\n",
+      " 1   Title    34 non-null     object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 672.0+ bytes\n"
+     ]
+    }
+   ],
    "source": [
     "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Article</th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>You must have seen the news divided into categ...</td>\n",
+       "      <td>News Classification with Machine Learning</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Article  \\\n",
+       "count                                                  34   \n",
+       "unique                                                 33   \n",
+       "top     You must have seen the news divided into categ...   \n",
+       "freq                                                    2   \n",
+       "\n",
+       "                                            Title  \n",
+       "count                                          34  \n",
+       "unique                                         33  \n",
+       "top     News Classification with Machine Learning  \n",
+       "freq                                            2  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.describe()"
    ]
@@ -70,27 +231,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Article    0\n",
+       "Title      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicated data: 1\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Duplicated data: {data.duplicated().sum()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicated data after cleaning: 0\n"
+     ]
+    }
+   ],
    "source": [
     "data.drop_duplicates(inplace=True)\n",
     "print(f\"Duplicated data after cleaning: {data.duplicated().sum()}\")"
@@ -105,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +634,7 @@
        "33  K-Means Clustering in Machine Learning, Cluste...  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
